# godot.lib.scene-manager-rs

./: Cargo.toml
src/: ext.rs  idle.rs  lib.rs  manager.rs  plugin.rs  promise.rs  resource.rs  settings.rs  transition.rs
src/manager/: gd_api.rs  internal.rs  transition.rs
src/manager/transition/: scene_transition_inner.rs
src/promise/: latch.rs
src/transition/: animation_player.rs
