[package]
name = "scene-manager"
version = "0.1.0"
edition = "2024"

authors = ["Ash Walker <ash@ashwalker.net>"]
repository = "https://github.com/SignalWalker/godot.lib.scene-manager-rs"
license = "AGPL-3.0-or-later"

[dependencies]
godot = { version = "^0.5", features = ["api-4-7", "experimental-threads"] }

parking_lot = "^0.12"

futures = "^0.3"

uuid = { version = "^1.23", features = ["v4"] }

thiserror = "^2.0"

tracing = "^0.1"
